// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PClean /> renders default 1`] = `
<DocumentFragment>
  .c0 {
  margin: 0 0.5rem;
  padding: 0;
}

<p
    class="c0"
  />
</DocumentFragment>
`;

exports[`<PFlex /> renders default 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  align-content: center;
  align-items: center;
  margin: 0 0.5rem;
  padding: 0;
}

<p
    class="c0"
  />
</DocumentFragment>
`;
